# SmartGroceryAssistant

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Phase1.md  README.md  Tiltfile  docker-compose.yml  package-lock.json  package.json  vite.config.ts
services/ai-service/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  codebase-intro.md  pyproject.toml  requirements.txt  worker.py
services/ai-service/app/: auth.py  config.py  dependencies.py  main.py  models.py
services/ai-service/app/llm/: client.py  prompts.py  test1.py
services/ai-service/app/middleware/: auth.py
services/ai-service/app/routes/: ai.py  health.py  item_info.py  translate.py
services/ai-service/app/schemas/: item_info.py  translate.py
services/ai-service/app/services/: cache.py  claude.py  queue.py  (+5 more)
services/ai-service/docs_AI_service/: INDEX.md  api_reference.md  architecture_report.md  design_decisions.md  dev_log.md  open_questions.md  phase1_context.md  phase1_guide.md  phased_plan.md
services/ai-service/private_docs_AI_service/: design_decisions.md  open_questions.md  phase1_context.md  phased_plan.md
services/ai-service/tests/: conftest.py  test_celery_app.py  test_config.py  test_domains.py  test_health.py  test_integration_suggest.py  test_item_info_route.py  test_item_info_service.py  test_job_store.py  test_llm_client.py  test_llm_error_handler.py  test_models.py  test_routes_ai.py  test_schemas.py  test_services_cache.py  test_services_claude.py  test_services_queue.py  test_translate_route.py  test_translate_service.py  test_worker.py  test_worker_tasks.py
(+329 files in other folders)
