[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "openai>=1.50.0",
    "redis>=5.1.1",
    "python-jose[cryptography]==3.3.0",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:jose",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
